# myserve

./: .gitignore  README.md  observability.md  pyproject.toml
.github/workflows/: python-package.yml
myserve/: main.py  metrics.py  scheduler.py  telemetry.py
myserve/api/: openai_types.py
myserve/core/: collate.py  engine.py  generate.py  kv.py  memory.py  models.py  sampling.py  tokenizer.py
myserve/core/quant/: convert.py  qlinear.py
tests/: test_attn_load.py  test_collate.py  test_generate.py  test_kv_parity.py  test_kv_speed_smoke.py  test_logprobs_shape.py  test_mem_gate_smoke.py  test_metrics_expose.py  test_openai_api.py  test_parity.py  test_quant_e2e.py  test_quant_fidelity.py  test_sampling_parity.py  test_sched_smoke.py  test_scheduler.py  test_scheduler2.py  test_smoke.py
tools/: grafana_dashboard.json  loadgen.py  prometheus.yml
