[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myserve"
version = "0.1.0"
description = "OpenAI-compatible My Inference Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.6",
  "transformers>=4.42",
  "tokenizers>=0.15",
  "sentencepiece>=0.1",
  "httpx>=0.27",         # tests
  "pytest>=8.2",         # tests
  "pytest-asyncio>=0.23", # tests async
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
